# qinglong_uv

./: .gitignore  .pre-commit-config.yaml  README.md  check_svt_version.sh  docker-compose.yaml  dockerfile  main.py  pyproject.toml
frontend/: .gitignore  vite.config.js
frontend/src/: App.vue  api.js
qinglong/: __init__.py  __main__.py  api.py  config.py  data_base.py  data_struct.py  database.py  download.py  errors.py  filelog.py  main.py  models.py  my_logger.py  scheduler.py  ui.py  util.py  uvtask.py
qinglong_ui/: api.py  main.py  main.ui  pull_project.ui  set_task.ui  ui_main.py  ui_pull_project.py  ui_set_task.py
scripts/: designer.py  qt_turn.py
tests/: test_api.py  test_filelog.py  test_main.py  test_scheduler.py  test_uvtask.py
