[project]
name = "qinglong-uv"
version = "0.1.0"
description = "一个使用uv管理Python版本和包的类qinglong定时运行面板，支持运行Python代码。A Qinglong-like panel for managing Python tasks using uv package manager, supporting Python code execution."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "tomin" }]
keywords = ["qinglong", "uv", "task-scheduler", "python", "nicegui"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "apscheduler>=3.11.0",
    "gitpython>=3.1.44",
    "httpx[http2]>=0.28.1",
    "nicegui>=2.18.0",
    "pydantic-settings>=2.8.1",
    "pyyaml>=6.0.2",
    "shelvez>=0.2.1",
]

[dependency-groups]
dev = [
    "jurigged>=0.6.0",
 "pre-commit>=4.2.0",
 "pytest>=8.3.5",
 "pywebview>=5.4",
]

[tool.setuptools]
packages = ["qinglong"]

[tool.uv]
no-binary-package = ["av"]
package = true

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.ruff]
line-length = 128
target-version = "py313"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.lint]
ignore = ["F401"]
